--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <textarea id="message" placeholder="Your Message" required></textarea>
         <button type="submit">Sign Guestbook</button>
     </form>
-    <ul id="entries-list"></ul> <!-- This is where messages will appear -->
+    <ul id="guestbook-entries"></ul> <!-- Updated to match JavaScript -->
 
     <script src="script.js"></script> <!-- Make sure this is the correct path -->
 </body>
